--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "nestdbg"
-version = "0.3.0"
+name = "nestcli"
+version = "0.4.0"
 edition = "2024"
 authors = ["TurtleP"]
 license = "MIT"
-description = "A simple remote debugging tool for LÖVE Potion games."
+description = "A simple CLI tool for LÖVE Potion games."
 readme = "README.md"
 homepage = "https://github.com/TurtleP/nestdbg"
 repository = "https://github.com/TurtleP/nestdbg"
@@ -12,15 +12,19 @@ keywords = ["cli", "debug"]
 categories = ["command-line-utilities"]
 
 [dependencies]
+aho-corasick = "1.1.3"
+anyhow = "1.0.100"
 clap = { version = "4.5.18", features = ["derive"] }
 clearscreen = "3.0.0"
 ctrlc = "3.4.6"
 directories = "6.0.0"
+inquire = "0.9.1"
 opener = { version = "0.7.2", features = ["reveal"] }
 serde = { version = "1.0.215", default-features = false, features = ["derive"] }
-tabled = "0.19.0"
 toml = "0.8.22"
+walkdir = "2.5.0"
 which = "7.0.3"
+zip = "6.0.0"
 
 [profile.release]
 lto = "fat"
