--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,17 @@ keywords = ["cli", "debug"]
 categories = ["command-line-utilities"]
 
 [dependencies]
-aho-corasick = "1.1.3"
-anyhow = "1.0.100"
-clap = { version = "4.5.18", features = ["derive"] }
+aho-corasick = "1.1.4"
+anyhow = "1.0.101"
+clap = { version = "4.5.57", features = ["derive"] }
 clearscreen = "3.0.0"
-ctrlc = "3.4.6"
+ctrlc = "3.5.1"
 directories = "6.0.0"
-inquire = "0.9.1"
+indicatif = "0.18.3"
+inquire = "0.9.3"
 opener = { version = "0.7.2", features = ["reveal"] }
-serde = { version = "1.0.215", default-features = false, features = ["derive"] }
-toml = "0.8.22"
+serde = { version = "1.0.228", default-features = false, features = ["derive"] }
+toml = "0.8.23"
 walkdir = "2.5.0"
 which = "7.0.3"
 zip = "6.0.0"
